--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -51,3 +51,13 @@
 .footer__service--link:hover{
     color: #0f172a;
 }
+.footer__copyright{
+    border-top: 3px solid #020b1d;
+    width: 100%;
+    padding: 20px 0 10px 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    flex-direction: column;
+}
