--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,63 +1,107 @@
-.footer{
-    width: 100%;
-    background: #62758e5b;
-    padding: 3%;
+.footer {
+  width: 100%;
+  background: #62758e5b;
+  padding: 3%;
 }
-.footer__container{
-    margin-bottom: 50px;
+.footer__container {
+  margin-bottom: 50px;
 }
-.footer__about--title{
-    text-align: center;
-    font-size: 1.5em;
-    color: #030d1f;
-    margin-bottom: 10px;
+.footer__about--title {
+  text-align: center;
+  font-size: 1.5em;
+  color: #030d1f;
+  margin-bottom: 10px;
 }
-.footer__about--content{
+.footer__about--content {
+  display: flex;
+  align-items: center;
+  color: #020b1d;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.location__sub--details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.sub__details {
+  color: #020b1d;
+  font-weight: 600;
+  font-size: 1.1em;
+}
+.subdetails--content {
+  color: #020b1d;
+  font-size: 1em;
+}
+.footer__services--list {
+  list-style: none;
+}
+.footer__service--link {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  color: #020b1d;
+  font-size: 1em;
+  text-decoration: none;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+.footer__service--link:hover {
+  color: blue;
+  text-decoration: underline;
+}
+.footer__copyright {
+  border-top: 3px solid #020b1d;
+  width: 100%;
+  padding: 20px 0 10px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  flex-direction: column;
+}
+.nav__socials{
+    gap: 20px;
+  }
+@media only screen and (min-width: 700px) and (max-width: 1023px) {
+  .footer {
     display: flex;
-    align-items: center;
-    color: #020b1d;
-    gap: 10px;
-    margin-bottom: 10px;
-}
-.location__sub--details{
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 0;
+  }
+  .footer__container {
+    width: 45%;
+  }
+  .footer__about--title {
+    font-size: 1.2em;
+    text-align: start;
+  }
+  .footer__copyright{
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
-.sub__details{
-    color: #020b1d;
-    font-weight: 600;
-    font-size: 1.1em;
-}
-.subdetails--content{
-    color: #020b1d;
-    font-size: 1em;
-}
-.footer__services--list{
-    list-style: none;
-}
-.footer__service--link{
+@media only screen and (min-width: 1024px) {
+  .footer {
     display: flex;
-    align-items: center;
-    gap: 3px;
-    color: #020b1d;
-    font-size: 1em;
-    font-weight: 600;
-    text-decoration: none;
-    margin-bottom: 10px;
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-}
-.footer__service--link:hover{
-    color: #0f172a;
-}
-.footer__copyright{
-    border-top: 3px solid #020b1d;
-    width: 100%;
-    padding: 20px 0 10px 0;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 0;
+  }
+  .footer__about--title {
+    font-size: 1.2em;
+    text-align: left;
+  }
+  .footer__location,
+  .footer__about {
+    width: 28%;
+  }
+  .footer__copyright{
     display: flex;
-    align-items: center;
-    gap: 10px;
-    justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
