--- a/src/components/navigation/NavBar.css
+++ b/src/components/navigation/NavBar.css
@@ -96,6 +96,7 @@
 
 .toggle-btn{
     position: absolute;
+    z-index: 201;
     display: flex;
     align-items: center;
     justify-content: center;
