--- a/src/components/navigation/NavBar.css
+++ b/src/components/navigation/NavBar.css
@@ -125,12 +125,14 @@
         justify-content: space-between;
         flex-direction: row;
         height: 60px;
-        width: 100vw;
+        width: 100%;
         background: #e8e8e8;
         padding: 0 2%;
     }
     .company-details{
+        width: 100%;
         height: 100%;
+        overflow-y: hidden;
         width: fit-content;
     }
     .nav-links{
