--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -2,3 +2,16 @@
     padding: 10px 3%;
     background: #f2f2f2f2;
 }
+.contact__title{
+    font-size: 1.5em;
+    color: #030d1f;
+    margin-bottom: 10px;
+}
+.contact__content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.contact__icons{
+    font-size: 1.3em;
+}
