--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -4,6 +4,9 @@
     margin-bottom: 1rem;
     color: #164e63;
 }
+.contact__form{
+    padding: 30px 0;
+}
 .contact__form--element{
     display: flex;
     flex-direction: column;
