--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,6 +1,6 @@
 .banner {
   width: 100%;
-  background-image: url("../../assets/image1.jpeg");
+  background-image: url("../../assets/slide1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
