--- a/src/pages/services/test-pumping/TestPumping.css
+++ b/src/pages/services/test-pumping/TestPumping.css
@@ -40,11 +40,11 @@
 .test__importance--title{
     font-size: 1.2em;
     font-weight: 600;
-    color: #030d1f;
+    color: #164e63;
 }
 .test__importance--icon{
     margin-right: 5px;
-    color: #164e63;
+    color: #1dbdff;
     font-size: 1.1em;
 }
 
