--- a/src/components/consultation/Consultation.css
+++ b/src/components/consultation/Consultation.css
@@ -24,7 +24,11 @@
     text-align: center;
     color: #81a1b7;
 }
+.consultation__description span{
+    color: #01bfff;
+}
 .consultation__description--divider{
+    margin: 10px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,8 +37,8 @@
 .consultation__description--divider .consultation--divide{
     width: 35%;
     height: 2px;
-    background: #01bfff;
+    background: #81a1b7;
 }
 .consultation__description--divider .consultation--text{
-    color: #01bfff;
+    color: #81a1b7;
 }
