--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -105,3 +105,24 @@
     justify-content: space-between;
   }
 }
+
+.scroll__up{
+  width: 40px;
+  height: 40px;
+  background: #020b1d;
+  color: #fff;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 1.4em;
+  transition: all 0.5s ease-in-out;
+}
+.scroll__up:hover{
+  background: #62758e5b;
+  color: #020b1d;
+}
