About Us section

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -94,3 +94,43 @@
         max-width: 31%;
     }
 }
+
+/* HomeAbout Section */
+.homeAbout{
+    padding: 20px 3%;
+}
+.homeAbout__container{
+    width: 100%;
+}
+.homeAbout__description{
+    font-size: 1.1em;
+    color: #383737;
+    margin: 10px 0;
+}
+.homeAbout__link{
+    text-decoration: none;
+    display: flex;
+    width: max-content;
+    gap: 10px;
+    align-items: center;
+    color: #172554;
+    font-size: 1.1em;
+    transition: all 0.3s ease;
+}
+.homeAbout__link:hover{
+    color: #01bfff;
+    gap: 12px;
+}
+.homeAbout__figure{
+    width: 100%;
+    margin: 20px 0;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.homeAbout__image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1);
+    transition: all 0.3s ease;
+}
