--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -134,3 +134,9 @@
     transform: scale(1);
     transition: all 0.3s ease;
 }
+@media only screen and (min-width: 800px){
+    .homeAbout{
+        display: flex;
+        gap: 10px;
+    }
+}
