--- a/src/components/consultation/Consultation.css
+++ b/src/components/consultation/Consultation.css
@@ -29,10 +29,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
 .consultation__description--divider .consultation--divide{
-    width: 25%;
+    width: 30px;
     height: 2px;
     background: #81a1b7;
 }
