--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,38 +1,111 @@
-.aboutOverview{
-    padding: 20px 3%;
+.aboutOverview {
+  padding: 20px 3%;
 }
-.aboutOverview__description--content{
-    color: #1e293b;
-    padding: 5px 0;
+.aboutOverview__description--content {
+  color: #1e293b;
+  padding: 5px 0;
 }
-.aboutOverview__services{
-    padding: 20px 0;
+.aboutOverview__services {
+  padding: 20px 0;
 }
-.aboutOverview__services--title{
-    color: #1e293b;
-    font-size: 1.2em;
+.aboutOverview__services--title {
+  color: #1e293b;
+  font-size: 1.2em;
 }
-.aboutOverview__services--service{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin: 8px 0;
-    color: #1e293b;
-
+.aboutOverview__services--service {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin: 8px 0;
+  color: #1e293b;
 }
-.aboutOverview__services--icon{
-    color: #312e81;
+.aboutOverview__services--icon {
+  color: #312e81;
+}
+.aboutOverview__figure {
+  width: 100%;
+}
+.aboutOverview__image {
+  position: relative;
+  width: 100%;
+  border-radius: 6px;
+  overflow: hidden;
+}
+.aboutOverview__details {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  display: flex;
+  flex-direction: column;
+  font-style: italic;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 10px;
+  border-radius: 5px;
+}
+.aboutOverview__details--content {
+  color: #ffffff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+}
+.aboutOverview__image .aboutOverview__image--img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.aboutOverview__preview {
+  margin: 15px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+.preview__images {
+  max-width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.preview__images--image {
+  width: 40px;
+  height: 40px;
+}
+.current--preview {
+  border: 3px solid #312e81;
+  width: 55px;
+  height: 55px;
+  border-radius: 5px;
+}
+.preview__images--img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.preview--btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border-radius: 3px;
+  border: 1px solid #312e81;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  color: #312e81;
+  transition: all 0.3s;
+}
+.preview--btns:hover {
+  background-color: #312e81;
+  color: white;
 }
 @media only screen and (min-width:800px){
     .aboutOverview{
         display: flex;
-        justify-content: space-evenly;
-        align-items: start;
+        gap: 20px;
     }
-    .aboutOverview > div{
-        width: 48%;
+    .aboutOverview__description{
+        width: 55%;
     }
-    .aboutOverview__services{
-        padding: 0;
+    .aboutOverview__figure{
+        width: 45%;
     }
 }
