--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -110,3 +110,48 @@
     width: 45%;
   }
 }
+/* Better Community  */
+.betterCommunity{
+  width: 100%;
+}
+.betterCommunity__figure{
+  width: 100%;
+}
+.betterCommunity__image{
+  width: 100%;
+  object-fit: cover;
+  min-height: 250px;
+}
+.betterCommunity__title{
+  margin: 10px 0;
+  color: #312e81;
+  font-size: 1.3em;
+  text-align: center;
+}
+.betterCommunity__description{
+  padding: 10px 3% 20px;
+}
+.betterCommunity__text{
+  padding: 5px 0;
+}
+.betterCommunity__button{
+  width: 100%;
+  margin: 20px 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.betterCommunity__button--btn{
+  border: none;
+  outline: none;
+  background: #0284c7;
+  color: #fff;
+  font-size: 1.2em;
+  padding: 5px 80px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.betterCommunity__button--btn:hover{
+  background: #0c4a6e;
+}
